# CRIA--CosmicRaysIdentificationAntiproton

./: CMakeLists.txt  README  antiproton-analysis-version.txt  rootlogon.C
Auxiliary/: Doxyfile.in
Configuration/: AntiprotonGeometry.cfg  AntiprotonIntermediateEnergy.cfg  AntiprotonLowEnergy.cfg  ExampleAnalysisTreeWriter.cfg  ExampleAnalysisTreeWriter_v7.0.cfg  PreselectionTreeWriterforProtonCC.cfg  (+3 more)
Libraries/: CMakeLists.txt
Libraries/AntiprotonAnalysisTools/: AntiprotonAnalysisTools.hh  CMakeLists.txt
Libraries/AntiprotonBinning/: AntiprotonBinning.C  AntiprotonBinning.hh  CMakeLists.txt
Libraries/AntiprotonIntermediateEnergyTemplatefitter/: CMakeLists.txt  Quantity.hh  Statistics.C  Statistics.hh  TemplateFitterforIntermediateEnergy.C  TemplateFitterforIntermediateEnergy.hh
Libraries/AntiprotonIntermediateEnergyTree/: AntiprotonIntermediateEnergyTree.C  AntiprotonIntermediateEnergyTree.hh  CMakeLists.txt
Libraries/AntiprotonLowEnergyTemplatefitter/: CMakeLists.txt  Quantity.C  TemplateFitterforLowEnergy.C  TemplateFitterforLowEnergy.hh  TemplateFitterforLowEnergy2D.C  TemplateFitterforLowEnergy2D.hh
Libraries/AntiprotonLowEnergyTree/: AntiprotonLowEnergyTree.C  AntiprotonLowEnergyTree.hh  CMakeLists.txt
Libraries/ExampleAnalysisTree/: ExampleAnalysisTree.C  ExampleAnalysisTree.hh
Libraries/LeptonAnalysisTools/: AnalysisSettings.hh  AveragingTools.hh  CMakeLists.txt  CanvasTools.hh  ChargeConfusionTools.hh  Clamping.hh  EcalBDTEfficiencyParametrization.C  EcalBDTEfficiencyParametrization.hh  EcalChiSquareLateralCalibration.C  EcalChiSquareLateralCalibration.hh  EfficiencyTemplateFits.C  EfficiencyTemplateFits.hh  ElectronAndPositronFluxModel.C  ElectronAndPositronFluxModel.hh  ElectronModelTwoPowerLawsWithSolarModulation.C  ElectronModelTwoPowerLawsWithSolarModulation.hh  ElectronPositronDoublePowerLawApproximation.C  ElectronPositronDoublePowerLawApproximation.hh  ElectronPositronModelWithSmoothDoubleBreak.C  ElectronPositronModelWithSmoothDoubleBreak.hh  FluxModel.C  FluxModel.hh  GraphTools.C  GraphTools.hh  Linkdef.h  MeasuringTimeParametrization.C  MeasuringTimeParametrization.hh  ModulatedPowerLawModel.C  ModulatedPowerLawModel.hh  MultiTrackChargeConfusionStudyTree.C  MultiTrackChargeConfusionStudyTree.hh  PositronModelTwoPowerLawsWithSolarModulationAndExpCutoff.C  PositronModelTwoPowerLawsWithSolarModulationAndExpCutoff.hh  PositronRatioTools.hh  RooFitTools.C  RooFitTools.hh  SelectorEfficiency.C  SelectorEfficiency.hh  SimplePowerLawModel.C  SimplePowerLawModel.hh  (+17 more)
Libraries/LeptonRooPdfs/: CMakeLists.txt  Linkdef.h  RooAsymmLandauLikePdf.C  RooAsymmLandauLikePdf.hh  RooExpGaussExpPdf.C  RooExpGaussExpPdf.hh  RooGaussExpPdf.C  RooGaussExpPdf.hh  RooGaussianPdf.C  RooGaussianPdf.hh  RooLangausPdf.C  RooLangausPdf.hh  RooNovosibirskPdf.C  RooNovosibirskPdf.hh
Libraries/LeptonUnfoldingTools/: AnalysisSettings.C  BayesUnfoldingWithCutoff.C  BayesUnfoldingWithCutoff.hh  CMakeLists.txt  CompositeParameterization.C  CompositeParameterization.hh  CompositeParameterizationFunction.C  CompositeParameterizationFunction.hh  CrystalBallParameterization.C  CrystalBallParameterization.hh  EnergyScaleDeviationModel.C  EnergyScaleDeviationModel.hh  EnergyScaleForwardFoldingDataset.C  EnergyScaleForwardFoldingDataset.hh  FoldedAccUnfoldToyMc.C  FoldedAccUnfoldToyMc.hh  FoldedAcceptanceUnfoldingForLeptons.C  FoldedAcceptanceUnfoldingForLeptons.hh  MatrixTools.C  MatrixTools.hh  MigrationParameterization.hh  MigrationRandomGenerator.C  MigrationRandomGenerator.hh  ModelFits.C  ModelFits.hh  RooUnfoldToyMc.C  RooUnfoldToyMc.hh  UnfoldingSystematicErrors.C  UnfoldingSystematicErrors.hh  UnfoldingTools.C  UnfoldingTools.hh  UnfoldingToyMc.C  UnfoldingToyMc.hh
Libraries/RigidityResolutionTree/: CMakeLists.txt  RigidityResolutionTree.C  RigidityResolutionTree.hh
Libraries/RooUnfold/: CMakeLists.txt  RooUnfold.h  RooUnfoldBayes.cxx  RooUnfoldBayes.h  RooUnfoldResponse.cxx  RooUnfoldResponse.h  TSVDUnfold_local.h
Libraries/Templatefitter/: CMakeLists.txt  TemplateFitter2DforProtonCC.C  TemplateFitter2DforProtonCC.hh  TemplateFitter2DforProtonCC_CCfixed_dev.C  TemplateFitter2DforProtonCC_CCfixed_dev.hh  TemplateFitterforProtonCC.C  TemplateFitterforProtonCC.hh
Programs/: CMakeLists.txt
Programs/AntiprotonIntermediateEnergy/: CMakeLists.txt  main.C
Programs/AntiprotonIntermediateEnergy/old/: AntiprotonIntermediateEnergy.C  AntiprotonIntermediateEnergy.hh  Linkdef.h
Programs/AntiprotonLowEnergyTreeWriter/: CMakeLists.txt  main.C
Programs/Antiproton_HighTF2D_CCFixed/: CMakeLists.txt  main.C  main_test.C
Programs/Antiproton_IntermediateTF1D/: 1DTemplateFit_TimeAveraged.C  1DTemplateFit_TimeDependent.C  CMakeLists.txt  CutDefinition.hh  MakeHistogram_TimeAveraged.C  MakeHistogram_TimeDependent.C  Timestamp_edge.C  main.hh
Programs/Antiproton_LowTF1D/: 2DTemplateFit_TimeAveraged.C  2DTemplateFit_TimeDependent.C  CMakeLists.txt  CommonHeader.hh  MakeHistogram_TimeAveraged.C  MakeHistogram_TimeDependent.C  Program_Structure.txt  TimeDependentHeader.hh
Programs/Antiproton_LowTF1D/useless/: useless_main_1D.C  useless_main_backup_with_Mass2Fit.C
Programs/Antiproton_TF2D/: CMakeLists.txt  main.C  main2.C
Programs/BartelRotation_dropped/: CMakeLists.txt  Timestamp_edge.C  main.C  main_old.C
Programs/ExampleAnalysisTreeReader/: ExampleAnalysisTreeReader.C  ExampleAnalysisTreeReader.hh
Programs/ExampleAnalysisTreeWriter/: CMakeLists.txt  main.C  main.hh
Programs/FluxCalculation/: CMakeLists.txt  FluxCalculation.C
Programs/Grapherror/: CMakeLists.txt  Grapherror.C
Programs/Measuringtime/: CMakeLists.txt  Measuringtime.C
Programs/PreselectionTreeWriter/: CMakeLists.txt  main.C
Programs/RigidityResolutionTreeWriter/: CMakeLists.txt  main.C
Programs/TriggerEfficiency/: CMakeLists.txt  main.C
Programs/Unfolding_Bayes/: CMakeLists.txt  Unfolding_Bayes.hh  main.C
Programs/Unfolding_Bayes_Intermediate/: CMakeLists.txt  main.C  main.hh
Programs/Unfolding_Bayes_Low/: CMakeLists.txt  main.C  main.hh
Programs/Unfolding_Iteration/: CMakeLists.txt  main.C
(+491 files in other folders)
