add_subdirectory(ExampleAnalysisTree)
add_subdirectory(LeptonUnfoldingTools)
add_subdirectory(RooUnfold)
add_subdirectory(LeptonAnalysisTools)
add_subdirectory(LeptonRooPdfs)
add_subdirectory(Templatefitter)
add_subdirectory(AntiprotonIntermediateEnergyTree)
add_subdirectory(RigidityResolutionTree)
add_subdirectory(AntiprotonIntermediateEnergyTemplatefitter)
add_subdirectory(AntiprotonLowEnergyTemplatefitter)
add_subdirectory(AntiprotonBinning)
add_subdirectory(AntiprotonAnalysisTools)
add_subdirectory(AntiprotonLowEnergyTree)
