add_subdirectory(ExampleAnalysisTreeReader)
add_subdirectory(ExampleAnalysisTreeWriter)
add_subdirectory(AntiprotonIntermediateEnergy)
add_subdirectory(Antiproton_TF2D)
add_subdirectory(Antiproton_HighTF2D_CCFixed)
add_subdirectory(Unfolding_Iteration)
add_subdirectory(Unfolding_Bayes)
add_subdirectory(Unfolding_Bayes_Intermediate)
add_subdirectory(RigidityResolutionTreeWriter)
add_subdirectory(Antiproton_IntermediateTF1D)
add_subdirectory(PreselectionTreeWriter)
add_subdirectory(Measuringtime)
add_subdirectory(FluxCalculation)
add_subdirectory(Grapherror)
add_subdirectory(Antiproton_LowTF1D)
add_subdirectory(TriggerEfficiency)
add_subdirectory(AntiprotonLowEnergyTreeWriter)
add_subdirectory(Unfolding_Bayes_Low)
message (STATUS "ACSOFT_DEFINITIONS '${ACSOFT_DEFINITIONS}'")
